// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Branches - BranchCard should match snapshot after more details is opened 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
            data-testid="test-branch-wy-header"
          >
            Test Branch WY
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="address1"
          >
            12 2nd St, Ste 303
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-city-state-zip"
          >
            Greenriver, Wyoming 82935
          </p>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root  css-wq495-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-store-details"
          tabindex="0"
          type="button"
        >
          Store Details
          <span
            class="MuiButton-endIcon MuiButton-iconSizeSmall css-1gk886o-MuiButton-endIcon"
          >
            <svg>
              arrow-drop-up.svg
            </svg>
          </span>
        </button>
        <div
          class="MuiCollapse-root MuiCollapse-vertical css-u3nwpa-MuiCollapse-root"
          style="min-height: 0px; height: 0px; transition-duration: 300ms;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Hours
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  M-F: 9AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SAT: 11AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SUN: 1PM - 3PM
                </p>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Phone
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                  data-testid="branch-phone-number"
                >
                  307-555-1234
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1kdcq3t"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-distance"
          >
            &gt; MAX_BRANCH_DISTANCE miles
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            data-testid="from-branch"
          >
            from home branch
          </span>
        </div>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-select-branch-button"
          tabindex="0"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Branches - BranchCard should match snapshot as product/list page 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
            data-testid="test-branch-wy-header"
          >
            Test Branch WY
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="address1"
          >
            12 2nd St, Ste 303
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-city-state-zip"
          >
            Greenriver, Wyoming 82935
          </p>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root  css-wq495-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-store-details"
          tabindex="0"
          type="button"
        >
          Store Details
          <span
            class="MuiButton-endIcon MuiButton-iconSizeSmall css-1gk886o-MuiButton-endIcon"
          >
            <svg>
              arrow-drop-down.svg
            </svg>
          </span>
        </button>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1us0kow-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Hours
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  M-F: 9AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SAT: 11AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SUN: 1PM - 3PM
                </p>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Phone
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                  data-testid="branch-phone-number"
                >
                  307-555-1234
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1kdcq3t"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-distance"
          >
            &gt; MAX_BRANCH_DISTANCE miles
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            data-testid="from-branch"
          >
            from home branch
          </span>
        </div>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-select-branch-button"
          tabindex="0"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Branches - BranchCard should match snapshot when loading 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 200px;"
          />
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 200px;"
          />
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 200px;"
          />
        </div>
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 128px; height: 32px;"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-i3pbo"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          />
        </div>
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="height: 36px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Branches - BranchCard should match snapshot with as from location as distance 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
            data-testid="test-branch-wy-header"
          >
            Test Branch WY
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="address1"
          >
            12 2nd St, Ste 303
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-city-state-zip"
          >
            Greenriver, Wyoming 82935
          </p>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root  css-wq495-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-store-details"
          tabindex="0"
          type="button"
        >
          Store Details
          <span
            class="MuiButton-endIcon MuiButton-iconSizeSmall css-1gk886o-MuiButton-endIcon"
          >
            <svg>
              arrow-drop-down.svg
            </svg>
          </span>
        </button>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1us0kow-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Hours
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  M-F: 9AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SAT: 11AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SUN: 1PM - 3PM
                </p>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Phone
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                  data-testid="branch-phone-number"
                >
                  307-555-1234
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1kdcq3t"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-distance"
          >
            &gt; MAX_BRANCH_DISTANCE miles
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            data-testid="from-branch"
          >
            from home branch
          </span>
        </div>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-select-branch-button"
          tabindex="0"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Branches - BranchCard should match snapshot with basic branch data 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
            data-testid="test-branch-header"
          >
            Test Branch
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="address1"
          >
            (No Address)
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-city-state-zip"
          >
            (No City)(No State) 
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
          data-testid="1004-select-branch-button"
          tabindex="0"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Branches - BranchCard should match snapshot with branch that is also the shipping branch 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
            data-testid="test-branch-wy-header"
          >
            Test Branch WY
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="address1"
          >
            12 2nd St, Ste 303
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-city-state-zip"
          >
            Greenriver, Wyoming 82935
          </p>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root  css-wq495-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-store-details"
          tabindex="0"
          type="button"
        >
          Store Details
          <span
            class="MuiButton-endIcon MuiButton-iconSizeSmall css-1gk886o-MuiButton-endIcon"
          >
            <svg>
              arrow-drop-down.svg
            </svg>
          </span>
        </button>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1us0kow-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Hours
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  M-F: 9AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SAT: 11AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SUN: 1PM - 3PM
                </p>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Phone
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                  data-testid="branch-phone-number"
                >
                  307-555-1234
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1kdcq3t"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-distance"
          >
            &gt; MAX_BRANCH_DISTANCE miles
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            data-testid="from-branch"
          >
            from home branch
          </span>
        </div>
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-19zohkf-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-select-branch-button"
          tabindex="0"
          type="button"
        >
          Selected
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Branches - BranchCard should match snapshot with detailed branch data 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
            data-testid="test-branch-wy-header"
          >
            Test Branch WY
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="address1"
          >
            12 2nd St, Ste 303
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-city-state-zip"
          >
            Greenriver, Wyoming 82935
          </p>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root  css-wq495-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-store-details"
          tabindex="0"
          type="button"
        >
          Store Details
          <span
            class="MuiButton-endIcon MuiButton-iconSizeSmall css-1gk886o-MuiButton-endIcon"
          >
            <svg>
              arrow-drop-down.svg
            </svg>
          </span>
        </button>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1us0kow-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Hours
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  M-F: 9AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SAT: 11AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SUN: 1PM - 3PM
                </p>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Phone
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                  data-testid="branch-phone-number"
                >
                  307-555-1234
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1kdcq3t"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-distance"
          >
            &gt; MAX_BRANCH_DISTANCE miles
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            data-testid="from-branch"
          >
            from home branch
          </span>
        </div>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-select-branch-button"
          tabindex="0"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Branches - BranchCard should match snapshot with detailed branch data with distance < 100 1`] = `
<div>
  <div
    class="MuiBox-root css-12aw9rk"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-wbxxl7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-193p9au-MuiTypography-root"
            data-testid="test-branch-wy-header"
          >
            Test Branch WY
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="address1"
          >
            12 2nd St, Ste 303
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-city-state-zip"
          >
            Greenriver, Wyoming 82935
          </p>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-disableElevation MuiButtonBase-root  css-wq495-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-store-details"
          tabindex="0"
          type="button"
        >
          Store Details
          <span
            class="MuiButton-endIcon MuiButton-iconSizeSmall css-1gk886o-MuiButton-endIcon"
          >
            <svg>
              arrow-drop-down.svg
            </svg>
          </span>
        </button>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1us0kow-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Hours
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  M-F: 9AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SAT: 11AM - 5PM
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                >
                  SUN: 1PM - 3PM
                </p>
              </div>
              <div
                class="MuiBox-root css-0"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-j41wgg-MuiTypography-root"
                >
                  Phone
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body2 css-rwfr69-MuiTypography-root"
                  data-testid="branch-phone-number"
                >
                  307-555-1234
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-4 css-1fogx24-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1kdcq3t"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
            data-testid="branch-distance"
          >
            24.5 miles
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            data-testid="from-branch"
          >
            from home branch
          </span>
        </div>
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
          data-testid="9876-select-branch-button"
          tabindex="0"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;
